# my-short-movie-agents

./: Makefile  agents-cli-manifest.yaml  pyproject.toml
app/: agent.py  story_agent.py  video_agent.py
app/.adk/: session.db
app/prompts/: director_agent.txt
deployment/.adk/: session.db
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
frontend/: package-lock.json  package.json
short_movie_agents/: __init__.py  agent.py  fast_api_app.py  screenplay_agent.py  server.py  story_agent.py  storyboard_agent.py
short_movie_agents/.adk/: session.db
short_movie_agents/app_utils/: reasoning_engine_adapter.py  telemetry.py  typing.py
short_movie_agents/prompts/: video_agent.txt
tests/integration/: test_agent.py  test_server_e2e.py
watchdog-6.0.0/: PKG-INFO  setup.cfg  setup.py
